// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Child 1`] = `
.c0 {
  width: 60%;
  height: 60%;
  display: inline-block;
  position: absolute;
  top: 0;
  border-radius: 100%;
  -webkit-animation: eeCuoj 2s infinite ease-in-out;
  animation: eeCuoj 2s infinite ease-in-out;
}

<div
  className="c0"
/>
`;

exports[`render Child second=true 1`] = `
.c0 {
  width: 60%;
  height: 60%;
  display: inline-block;
  position: absolute;
  top: 0;
  border-radius: 100%;
  -webkit-animation: eeCuoj 2s infinite ease-in-out;
  animation: eeCuoj 2s infinite ease-in-out;
  top: auto;
  bottom: 0;
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

<div
  className="c0"
/>
`;

exports[`render without props 1`] = `
.c0 {
  width: 40px;
  height: 40px;
  margin: 40px auto;
  position: relative;
  text-align: center;
  -webkit-animation: cZxgpV 2s infinite linear;
  animation: cZxgpV 2s infinite linear;
}

.c0 > .c1 {
  background-color: #333;
}

<div
  className="c0"
  color="#333"
  size={40}
/>
`;
